--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -67,7 +67,8 @@ nav{
 nav div{
     width: 800px;
     margin: auto;
-    font-size: 70px;
+    font-size: 30px;
+    padding-top : 45px;
 }
 
 .active{
@@ -81,4 +82,42 @@ nav ul {
 
 nav li{
     display: inline;
+}
+
+.right{
+    position: relative;
+    top: -35px;
+    float: right;
+    font-size: 0.7em;
+    margin-top: 5px;
+}
+
+/* === FORMULAIRE ===*/
+
+form{
+    width: 300px;
+    margin: auto;
+    border:1px solid black;
+    border-radius: 5px 5px;
+    padding : 20px 40px;
+    background-color: rgba(70, 217, 127,.3);
+}
+
+.field{
+    margin: 10px 0px;
+}
+
+/* === TABLE ===*/
+
+table{
+    margin:20px;
+    max-width:660px;
+    border-collapse: collapse;
+}
+
+td, th{
+    text-align: left;
+    padding: 5px 5px;
+    border: 1px solid black;
+    font-size: 14px;
 }
