--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -49,6 +49,7 @@ footer p{
 
 html {
     font-family: 'Inter', sans-serif;
+    background: url(background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
