Modification of display : - Adding a dropdown menu - Page magasin is now on index

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -16,6 +16,7 @@ h1{
 
 a:hover{
     color: gray;
+    transition: all 0.3s ease-out;
 }
 
 footer {
@@ -72,9 +73,6 @@ nav div{
     padding-top : 45px;
 }
 
-.active{
-    color: rgb(200,200,200);
-}
 
 nav ul {
     display: block;
@@ -120,4 +118,55 @@ td, th{
     padding: 5px 5px;
     border: 1px solid black;
     font-size: 14px;
+}
+
+.dropbtn {
+    border: none;
+    cursor: pointer;
+    font-size: 1em;
+    color: #FE7F2D;
+    font-weight: bold;
+    text-decoration: none;
+    background-color: unset;
+    font-family: 'Inter', sans-serif;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    font-size: 1em;
+    padding:0px;
+    background-color: #3E3E3E;
+    min-width: 160px;
+    max-width: 200px;
+    z-index: 1;
+    border-left: 4px solid #FE7F2D;
+}
+
+.dropdown-content a {
+    margin:5px 15px;
+    color: #FE7F2D;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    color: gray;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    color: gray;
+}
+
+.active{
+    color: rgb(200,200,200);
 }
